--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="Imagenes/logo.jpg" type="image/png">
     <link rel="stylesheet" href="styles.css">
-    <title>Reservaciones</title>
+    <title>Tiendita</title>
 </head>
 
 <body>
 	<div class="main">
 	<header>
-		<h1>Tienda</h1>
+        <ul class="menu">
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#sodas">Sodas</a></li>
+            <li><a href="#chips">Chips</a></li>
+            <li class=" ESPACIO "><a href="#chuches">Chuches</a></li>
+            
+          </ul>
 
     <div class="main">
         <!-- Top Container -->
@@ -72,7 +78,7 @@
         </div>
     </header>
 
-
+    <h1>TIENDA</h1>
     <div class="container-items">
         <div class="item">
             <figure>
@@ -149,19 +155,19 @@
     <!-- Footer -->
 <div class="footer">
     <div class="footer-header">
-        Si quieres que algo sea realmente delicioso y único, visita nuestro establecimiento de PALAPADEPPS.
+        Siguenos en nuestras redes sociales ahora y mantente al día con nuevas colecciones y ofertas exclusivas.
     </div>
     <div class="footer-links">
         <div class="link">
             <h5>Teléfonos</h5>
-            <p>4491668977</p>
-            <p>4494341202</p>
-            <p>4497572335</p>
+            <p>4491234567</p>
+            <p>4497654321</p>
+           
         </div>
         <div class="link">
             <h5>Correos</h5>
             <p>AtencionAlCliente@gmai.com</p>
-            <p>reservas@PALAPADEPPS.com</p>
+            <p>Sugerencias@Tiendita.com</p>
         </div>
         <div class="link">
             <h5>Redes</h5>
