--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Tiendita</title>
 </head>
 <header>
-   
+    <header class="fixed-header">
     <ul class="menu">
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#sodas">Sodas</a></li>
@@ -222,6 +222,7 @@
         
 </body>
         <!-- Footer -->
+    <footer class="fixed-footer">
         <div class="footer">
             <div class="footer-header">
                 Siguenos en nuestras redes sociales ahora y mantente al día con nuevas colecciones y ofertas exclusivas.
@@ -252,6 +253,7 @@
                 </div>
             </div>
         </div>
+    </footer>
         <!-- End of Footer -->
       
         <div class="copyright">
