--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </figure>
                 <div class="info-product">
                     <h2>Sprite</h2>
-                    <p class="price">$5.30</p>
+                    <p class="price">$15</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                 </figure>
                 <div class="info-product">
                     <h2>Pepsi</h2>
-                    <p class="price">$7.30</p>
+                    <p class="price">$17</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
@@ -112,27 +112,27 @@
                 </figure>
                 <div class="info-product">
                     <h2>Fuzetea</h2>
-                    <p class="price">$7.30</p>
+                    <p class="price">$16</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="Imagenes/drpp.jpg" alt="producto" />
+                    <img src="Imagenes/drppp.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Dr. Peper</h2>
-                    <p class="price">$7.30</p>
+                    <p class="price">$14</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="Imagenes/drpp.jpg" alt="producto" />
+                    <img src="Imagenes/cocacola.png" alt="producto" />
                 </figure>
                 <div class="info-product">
-                    <h2>Dr. Peper</h2>
-                    <p class="price">$7.30</p>
+                    <h2>Coca-Cola</h2>
+                    <p class="price">$17</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                 </figure>
                 <div class="info-product">
                     <h2>Chetos</h2>
-                    <p class="price">$5.60</p>
+                    <p class="price">$18</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                 </figure>
                 <div class="info-product">
                     <h2>Doritos</h2>
-                    <p class="price">$3.20</p>
+                    <p class="price">$20</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
@@ -169,27 +169,27 @@
                 </figure>
                 <div class="info-product">
                     <h2>Chips</h2>
-                    <p class="price">$5.60</p>
+                    <p class="price">$19</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="Imagenes/takis.jpg" alt="producto" />
+                    <img src="Imagenes/papass.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
-                    <h2>Takis</h2>
-                    <p class="price">$5.60</p>
+                    <h2>Sabritas</h2>
+                    <p class="price">$21</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
            </div>
            <div class="item">
             <figure>
-                <img src="Imagenes/takis.jpg" alt="producto" />
+                <img src="Imagenes/takis.png" alt="producto" />
             </figure>
             <div class="info-product">
                 <h2>Takis</h2>
-                <p class="price">$5.60</p>
+                <p class="price">$17</p>
                 <button class="btn-add-cart">Añadir al carrito</button>
             </div>
        </div>
@@ -206,7 +206,7 @@
                 </figure>
                 <div class="info-product">
                     <h2>Lucas Muecas</h2>
-                    <p class="price">$5.60</p>
+                    <p class="price">$13</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
@@ -217,44 +217,42 @@
                 </figure>
                 <div class="info-product">
                     <h2>Lucas Panzon</h2>
-                    <p class="price">$5.50</p>
+                    <p class="price">$15</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
 
             <div class="item">
                 <figure>
-                    <img src="Imagenes/kitkat.jpg" alt="producto" />
+                    <img src="Imagenes/kit.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>kitkat
                         Nestle
-                    </h2>
-                    <p class="price">$4.60</p>
+                    </h2><br>
+                    <p class="price">$16</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="Imagenes/mym.jpg" alt="producto" />
+                    <img src="Imagenes/mm.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
-                    <h2>
-                        M&M´s
-                        Cacahuate
+                    <h2>M&M´s Cacahuate
                     </h2>
-                    <p class="price">$4.60</p>
+                    <p class="price">$24</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="Imagenes/mym.jpg" alt="producto" />
+                    <img src="Imagenes/buba.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
-                    <h2>M&M´s
+                    <h2>Bubbalo Rollo
                     </h2>
-                    <p class="price">$4.60</p>
+                    <p class="price">$26</p>
                     <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
             </div>
