--- a/index2.html
+++ b/index2.html
@@ -104,7 +104,7 @@
         <div class="carousel">
             <figure>
                  <img src="Imagenes/sprite.jpg" alt="producto" class="active" />
-                 <img src="Imagenes/cheetos.jpg" alt="producto"  />
+                 <img src="Imagenes/dsprite.png" alt="producto"  />
             </figure> 
             <div class="arrow left" onclick="prevSlide(0)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(0)">&#10095;</div>
@@ -120,7 +120,7 @@
         <div class="carousel">
             <figure>
                 <img src="Imagenes/pepsi.jpg" alt="producto" class="active" />
-                <img src="Imagenes/drppp.jpg" alt="producto"  />
+                <img src="Imagenes/dspepsi.png" alt="producto"  />
              </figure>
              <div class="arrow left" onclick="prevSlide(1)">&#10094;</div>
              <div class="arrow right" onclick="nextSlide(1)">&#10095;</div>
@@ -137,7 +137,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/fuze.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dsfuzetea.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(2)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(2)">&#10095;</div>
@@ -152,7 +152,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/drpp.jpg" alt="producto" class="active" />
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dsdrpp.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(3)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(3)">&#10095;</div>
@@ -167,7 +167,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/cocacola.png" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dscocacola.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(4)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(4)">&#10095;</div>
@@ -187,7 +187,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/cheetosn.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dscheetos.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(5)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(5)">&#10095;</div>
@@ -203,7 +203,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/dori.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/sprite.jpg" alt="producto"  />
+                <img src="Imagenes/dsdoritos.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(6)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(6)">&#10095;</div>
@@ -219,7 +219,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/chip.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dschips.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(7)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(7)">&#10095;</div>
@@ -234,7 +234,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/takis.png" alt="producto"class="active" />
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dstakis.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(8)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(8)">&#10095;</div>
@@ -249,7 +249,7 @@
         <div class="carousel">
             <figure>
             <img src="Imagenes/papass.jpg" alt="producto"class="active" />
-            <img src="Imagenes/dori.jpg" alt="producto"  />
+            <img src="Imagenes/dssabritas.png" alt="producto"  />
         </figure>
         <div class="arrow left" onclick="prevSlide(9)">&#10094;</div>
         <div class="arrow right" onclick="nextSlide(9)">&#10095;</div>
@@ -271,7 +271,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/lucas.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dslucasmuecas.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(10)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(10)">&#10095;</div>
@@ -287,7 +287,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/lucasp.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dslucaspanzon.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(11)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(11)">&#10095;</div>
@@ -303,7 +303,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/kit.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dschocolatekitkat.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(12)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(12)">&#10095;</div>
@@ -321,7 +321,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/mm.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dsmym.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(13)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(13)">&#10095;</div>
@@ -338,7 +338,7 @@
             <div class="carousel">
                 <figure>
                 <img src="Imagenes/buba.jpg" alt="producto" class="active"/>
-                <img src="Imagenes/dori.jpg" alt="producto"  />
+                <img src="Imagenes/dsbubbalo.png" alt="producto"  />
             </figure>
             <div class="arrow left" onclick="prevSlide(14)">&#10094;</div>
             <div class="arrow right" onclick="nextSlide(14)">&#10095;</div>
@@ -359,77 +359,77 @@
  
 </body>
 <footer class="footer" id="mas">
-  <div class="container container-footer">
-    <div class="menu-footer">
-      <div class="contact-info">
-        <p class="title-footer">Información de Contacto</p>
-        <ul>
-          <li> Dirección: 71 Pennington Lane Vernon Rockville, CT 06066 </li>
-          <li>Teléfono: 123-456-7890</li>
-          <li>Fax: 55555300</li>
-          <li>EmaiL: baristas@support.com</li>
-        </ul>
-        <div class="social-icons">
-          <span class="facebook">
-           <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-          </span>
-          <span class="twitter">
-            <a href="https://www.twitter.com"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
-          </span>
-          <span class="youtube">
-            <a href="https://www.youtube.com"> <i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
-          </span>
-          <span class="pinterest">
-            <a href="https://www.pinterest.com"><i class="fa-brands fa-pinterest-p" aria-hidden="true"></i></a>
-          </span>
-          <span class="instagram">
-            <a href="https://www.instagram.com"> <i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-          </span>
+    <div class="container container-footer">
+      <div class="menu-footer">
+        <div class="contact-info">
+          <p class="title-footer">Información de Contacto</p>
+          <ul>
+            <li> Dirección: 71 Pennington Lane Vernon Rockville, CT 06066 </li>
+            <li>Teléfono: 123-456-7890</li>
+            <li>Fax: 55555300</li>
+            <li>EmaiL: baristas@support.com</li>
+          </ul>
+          <div class="social-icons">
+            <span class="facebook">
+             <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+            </span>
+            <span class="twitter">
+              <a href="https://www.twitter.com"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
+            </span>
+            <span class="youtube">
+              <a href="https://www.youtube.com"> <i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+            </span>
+            <span class="pinterest">
+              <a href="https://www.pinterest.com"><i class="fa-brands fa-pinterest-p" aria-hidden="true"></i></a>
+            </span>
+            <span class="instagram">
+              <a href="https://www.instagram.com"> <i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+            </span>
+          </div>
+        </div>
+        <div class="information">
+          <p class="title-footer">Información</p>
+          <ul>
+            <li><a href="#">Acerca de Nosotros</a></li>
+            <li><a href="#">Información Delivery</a></li>
+            <li><a href="#">Politicas de Privacidad</a></li>
+            <li><a href="#">Términos y condiciones</a></li>
+            <li><a href="#">Contactános</a></li>
+          </ul>
+        </div>
+        <div class="my-account">
+          <p class="title-footer">Mi cuenta</p>
+          <ul>
+            <li><a href="#">Mi cuenta</a></li>
+            <li><a href="#">Historial de ordenes</a></li>
+            <li><a href="#">Lista de deseos</a></li>
+            <li><a href="#">Boletín</a></li>
+            <li><a href="#">Reembolsos</a></li>
+          </ul>
+        </div>
+        <div class="newsletter">
+          <p class="title-footer">Boletín informativo</p>
+          <div class="content">
+            <p> Suscríbete a nuestros boletines ahora y mantente al día con nuevas colecciones y ofertas exclusivas. </p>
+            <input type="email" placeholder="Ingresa el correo aquí...">
+            <button>Suscríbete</button>
+          </div>
         </div>
       </div>
-      <div class="information">
-        <p class="title-footer">Información</p>
-        <ul>
-          <li><a href="#">Acerca de Nosotros</a></li>
-          <li><a href="#">Información Delivery</a></li>
-          <li><a href="#">Politicas de Privacidad</a></li>
-          <li><a href="#">Términos y condiciones</a></li>
-          <li><a href="#">Contactános</a></li>
-        </ul>
-      </div>
-      <div class="my-account">
-        <p class="title-footer">Mi cuenta</p>
-        <ul>
-          <li><a href="#">Mi cuenta</a></li>
-          <li><a href="#">Historial de ordenes</a></li>
-          <li><a href="#">Lista de deseos</a></li>
-          <li><a href="#">Boletín</a></li>
-          <li><a href="#">Reembolsos</a></li>
-        </ul>
-      </div>
-      <div class="newsletter">
-        <p class="title-footer">Boletín informativo</p>
-        <div class="content">
-          <p> Suscríbete a nuestros boletines ahora y mantente al día con nuevas colecciones y ofertas exclusivas. </p>
-          <input type="email" placeholder="Ingresa el correo aquí...">
-          <button>Suscríbete</button>
+      <div class="customer-support">
+        <i class="fa-solid fa-headset" aria-hidden="true"></i>
+        <div class="content-customer-support">
+          <span class="text">Soporte al cliente</span>
+          <span class="number">449-257-7808</span>
         </div>
       </div>
-    </div>
-    <div class="customer-support">
-      <i class="fa-solid fa-headset" aria-hidden="true"></i>
-      <div class="content-customer-support">
-        <span class="text">Soporte al cliente</span>
-        <span class="number">449-257-7808</span>
+      <div class="copyright">
+        <p> Desarrollado por Daniela Reyes y Dulce Marina; 2024 </p>
+        <img src="Imagenes/payment.png" alt="Pagos">
       </div>
     </div>
-    <div class="copyright">
-      <p> Desarrollado por Daniela Reyes y Dulce Marina; 2024 </p>
-      <img src="Imagenes/payment.png" alt="Pagos">
-    </div>
-  </div>
-
-</footer>
+  
+  </footer>
 
 
 
