--- a/index2.html
+++ b/index2.html
@@ -77,9 +77,10 @@
   <div class="main">
     <h1 class="heading-1" id="inicio"></h1>
     <h1 class="heading-1" id="in"></h1>
-    <br>
+
     <section class="container top-categories" id="inicio">
-        <h1 class="heading-1" >Mejores Categorías</h1>
+      <br>
+        <div><h1 class="heading-1" >Mejores Categorías</h1></div>
         <div class="container-categories">
           <div class="card-category category-moca" id="sodas">
             <p>Sodas</p>
