--- a/index2.html
+++ b/index2.html
@@ -88,7 +88,9 @@
     <h1 class="heading-1" id="in"></h1>
 
     <section class="container top-categories" id="inicio"><br><br>
-        <h1 class="heading-1" >Mejores Categorías</h1>
+      <h1 class="heading-1" id="in"></h1>
+
+        <div><h1 class="heading-1" >Mejores Categorías</h1></div>
         <div class="container-categories">
           <div class="card-category category-moca" id="sodas">
             <p>Sodas</p>
