--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
       <div class="container-navbar">
         <nav class="navbar container">
           <div class="logo">
-            <img src="Imagenes/logo.jpg" alt="Nombre de tu empresa">
+            <img src="Imagenes/logo.jfif" alt="Nombre de tu empresa">
             
         </div>
 
