--- a/index2.html
+++ b/index2.html
@@ -146,10 +146,10 @@
         </div>
         <div class="stars">
           <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
         </div>
         <div class="info-product">
           <h2>Pepsi</h2>
@@ -171,8 +171,8 @@
           <i class="fa-solid fa-star" aria-hidden="true"></i>
           <i class="fa-solid fa-star" aria-hidden="true"></i>
           <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-regular fa-star" aria-hidden="true"></i>
-          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
         </div>
         <div class="info-product">
           <h2>Fuzetea</h2>
@@ -191,10 +191,10 @@
         </div>
         <div class="stars">
           <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
         </div>
         <div class="info-product">
           <h2>Dr. Peper</h2>
@@ -214,9 +214,9 @@
         <div class="stars">
           <i class="fa-solid fa-star" aria-hidden="true"></i>
           <i class="fa-solid fa-star" aria-hidden="true"></i>
-          <i class="fa-regular fa-star" aria-hidden="true"></i>
-          <i class="fa-regular fa-star" aria-hidden="true"></i>
-          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
         </div>
         <div class="info-product">
           <h2>CocaCola</h2>
@@ -246,6 +246,13 @@
           <div class="arrow left" onclick="prevSlide(5)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(5)">&#10095;</div>
         </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+        </div>
         <div class="info-product">
           <h2>Chetos</h2>
           <p class="price">$17</p>
@@ -261,6 +268,13 @@
           </figure>
           <div class="arrow left" onclick="prevSlide(6)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(6)">&#10095;</div>
+        </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
         </div>
         <div class="info-product">
           <h2>Doritos</h2>
@@ -278,6 +292,13 @@
           <div class="arrow left" onclick="prevSlide(7)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(7)">&#10095;</div>
         </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+        </div>
         <div class="info-product">
           <h2>Chips</h2>
           <p class="price">$18</p>
@@ -293,6 +314,13 @@
           <div class="arrow left" onclick="prevSlide(8)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(8)">&#10095;</div>
         </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+        </div>
         <div class="info-product">
           <h2>Takis</h2>
           <p class="price">$19</p>
@@ -307,6 +335,13 @@
           </figure>
           <div class="arrow left" onclick="prevSlide(9)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(9)">&#10095;</div>
+        </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
         </div>
         <div class="info-product">
           <h2>Sabritas</h2>
@@ -338,6 +373,13 @@
           <div class="arrow left" onclick="prevSlide(10)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(10)">&#10095;</div>
         </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+        </div>
         <div class="info-product">
           <h2>Lucas Muecas</h2>
           <p class="price">$8</p>
@@ -354,6 +396,13 @@
           <div class="arrow left" onclick="prevSlide(11)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(11)">&#10095;</div>
         </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+        </div>
         <div class="info-product">
           <h2>Lucas Panzon</h2>
           <p class="price">$12</p>
@@ -364,18 +413,24 @@
       <div class="item">
         <div class="carousel">
           <figure>
-            <img src="Imagenes/kit.jpg" alt="producto" class="active" />
+            <img src="Imagenes/kitkat.jpg" alt="producto" class="active" />
             <img src="Imagenes/dschocolatekitkat.png" alt="producto" />
           </figure>
           <div class="arrow left" onclick="prevSlide(12)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(12)">&#10095;</div>
         </div>
-
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+        </div>
         <div class="info-product">
-          <h2>kitkat
-            Nestle
+          <h2>Kitkat Nestle
           </h2>
           <p class="price">$14</p>
+          <br>
           <button class="btn-add-cart">Añadir al carrito</button>
         </div>
       </div>
@@ -387,6 +442,13 @@
           </figure>
           <div class="arrow left" onclick="prevSlide(13)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(13)">&#10095;</div>
+        </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
         </div>
         <div class="info-product">
           <h2>
@@ -405,10 +467,18 @@
           <div class="arrow left" onclick="prevSlide(14)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(14)">&#10095;</div>
         </div>
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+        </div>
         <div class="info-product">
           <h2>Bubbalo rollo
           </h2>
           <p class="price">$28</p>
+          <br>
           <button class="btn-add-cart">Añadir al carrito</button>
         </div>
       </div>
