--- a/index2.html
+++ b/index2.html
@@ -467,7 +467,13 @@
           <div class="arrow left" onclick="prevSlide(14)">&#10094;</div>
           <div class="arrow right" onclick="nextSlide(14)">&#10095;</div>
         </div>
-        
+        <div class="stars">
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-solid fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+          <i class="fa-regular fa-star" aria-hidden="true"></i>
+        </div>
         <div class="info-product">
           <h2>Bubbalo rollo
           </h2>
