--- a/index2.html
+++ b/index2.html
@@ -28,14 +28,11 @@
           <i class="fa-solid fa-bars" aria-hidden="true"></i>
 
           <ul class="menu">
-            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#principio">Inicio</a></li>
             <li><a href="#sodas">Sodas</a></li>
             <li><a href="#chips">Chips</a></li>
             <li><a href="#chuches">Chuches</a></li>
             <li class=" ESPACIO "><a href="#mas">Más</a></li>
-
-
-
           </ul>
 
 
@@ -83,12 +80,10 @@
   </div>
 
   <div class="main">
-    <h1 class="heading-1" id="inicio"></h1>
+    <h1 class="heading-1" id="principio">mmmmmm</h1>
     <h1 class="heading-1" id="in"></h1>
-
     <section class="container top-categories" id="inicio"><br><br>
       <h1 class="heading-1" id="in"></h1>
-
       <div>
         <h1 class="heading-1">Mejores Categorías</h1>
       </div>
@@ -225,17 +220,17 @@
         </div>
       </div>
       <div>
-        <h1 class="heading-1" id="chips"></h1>
+        <h1 class="h" id="chips"></h1>
       </div>
       <div>
-        <h1 class="heading-1" id="chips"></h1>
+        <h1 class="h" id="chips"></h1>
       </div>
       <h1 class="heading-1" id="chips">CHIPS</h1>
       <div>
-        <h1 class="heading-1" id="chips"></h1>
+        <h1 class="h" id="chips"></h1>
       </div>
       <div>
-        <h1 class="heading-1" id="chips"></h1>
+        <h1 class="h" id="chips"></h1>
       </div>
       <div class="item">
         <div class="carousel">
