--- a/sodasV.html
+++ b/sodasV.html
@@ -19,8 +19,8 @@
         <i class="fa-solid fa-bars" aria-hidden="true"></i>
         <ul class="menu">
           <li><a href="index2.html">Inicio</a></li>
-          <li><a href="index2.html">Sodas</a></li>
-          <li><a href="index2.html">Chips</a></li>
+          <li><a href="index2.html#sodas">Sodas</a></li>
+          <li><a href="index2.html#chips">Chips</a></li>
           <li><a href="index2.html#chuches">Chuches</a></li>
           <li class=" ESPACIO "><a href="sodasV.html#mas">Más</a></li>
          
