--- a/chipsV.html
+++ b/chipsV.html
@@ -18,9 +18,9 @@
           <nav class="navbar container">
             <i class="fa-solid fa-bars" aria-hidden="true"></i>
             <ul class="menu">
-              <li><a href="index2.html">Inicio</a></li>
-              <li><a href="index2.html">Sodas</a></li>
-              <li><a href="index2.html">Chips</a></li>
+              <li><a href="index2.html#inicio">Inicio</a></li>
+              <li><a href="index2.html#sodas">Sodas</a></li>
+              <li><a href="index2.html#chips">Chips</a></li>
               <li><a href="index2.html#chuches">Chuches</a></li>
               <li class=" ESPACIO "><a href="chipsV.html#mas">Más</a></li>
              
