--- a/index2.html
+++ b/index2.html
@@ -80,10 +80,9 @@
   </div>
 
   <div class="main">
-    <h1 class="heading-1" id="principio">mmmmmm</h1>
-    <h1 class="heading-1" id="in"></h1>
-    <section class="container top-categories" id="inicio"><br><br>
-      <h1 class="heading-1" id="in"></h1>
+    <h1 class="heading-1" id="principio">mmmmmm</h1><br>
+        <section class="container top-categories" id="inicio"><br><br>
+      
       <div>
         <h1 class="heading-1">Mejores Categorías</h1>
       </div>
@@ -232,6 +231,7 @@
       <div>
         <h1 class="h" id="chips"></h1>
       </div>
+      
       <div class="item">
         <div class="carousel">
           <figure>
