--- a/index2.html
+++ b/index2.html
@@ -470,7 +470,7 @@
           <i class="fa-solid fa-star" aria-hidden="true"></i>
           <i class="fa-regular fa-star" aria-hidden="true"></i>
           <i class="fa-regular fa-star" aria-hidden="true"></i>
-        </div><br><br>
+        </div>
         <div class="info-product">
           <h2>Bubbalo rollo
           </h2>
