--- a/index2.html
+++ b/index2.html
@@ -424,8 +424,7 @@
         </div><br><br>
         
         <div class="info-product">
-          <h2>Kitkat Nestle
-          </h2>
+          <h2>Kitkat Nestle</h2>
           <p class="price">$14</p>
           
           <button class="btn-add-cart">Añadir al carrito</button>
