--- a/chipsV.html
+++ b/chipsV.html
@@ -26,8 +26,8 @@
              
               <li>
                 <div class="container-logo">
-                  <i class="fa-solid fa-store" aria-hidden="true"></i>
-                  <h1 class="logo">Tiendita</h1>
+
+                  <h1 class="Tiendita">Tiendita</h1>
                 </div>
               </li>
             </ul>
