--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
 
 
           <div class="container-logo">
-            <h1 class="logo">Tiendita</h1>
+            <h1 class="Tiendita">Tiendita</h1>
           </div>
 
           <i class="fa-solid fa-bars" aria-hidden="true"></i>
