--- a/index2.html
+++ b/index2.html
@@ -87,15 +87,15 @@
         <h1 class="heading-1">Mejores Categorías</h1>
       </div>
       <div class="container-categories">
-        <div class="card-category category-moca" id="sodas">
+        <div class="card-category category-soda" id="sodas">
           <p>Sodas</p>
           <a href="sodasV.html"><span>Ver más</span></a>
         </div>
-        <div class="card-category category-expreso">
+        <div class="card-category category-chips">
           <p>Chips</p>
           <a href="chipsV.html"><span>Ver más</span></a>
         </div>
-        <div class="card-category category-capuchino">
+        <div class="card-category category-chuche">
           <p>Chuches</p>
           <a href="chuchesV.html"> <span>Ver más</span></a>
         </div>
