--- a/sodasV.html
+++ b/sodasV.html
@@ -18,10 +18,10 @@
       <nav class="navbar container">
         <i class="fa-solid fa-bars" aria-hidden="true"></i>
         <ul class="menu">
-          <li><a href="index2.html">Inicio</a></li>
-          <li><a href="index2.html#sodas">Sodas</a></li>
-          <li><a href="index2.html#chips">Chips</a></li>
-          <li><a href="index2.html#chuches">Chuches</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="index.html#sodas">Sodas</a></li>
+          <li><a href="index.html#chips">Chips</a></li>
+          <li><a href="index.html#chuches">Chuches</a></li>
           <li class=" ESPACIO "><a href="sodasV.html#mas">Más</a></li>
          
           <li>
