--- a/sodasV.html
+++ b/sodasV.html
@@ -19,9 +19,9 @@
         <i class="fa-solid fa-bars" aria-hidden="true"></i>
         <ul class="menu">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="index.html#sodas">Sodas</a></li>
-          <li><a href="index.html#chips">Chips</a></li>
-          <li><a href="index.html#chuches">Chuches</a></li>
+          <li><a href="sodasV.html">Sodas</a></li>
+          <li><a href="chipsV.html">Chips</a></li>
+          <li><a href="">Chuches</a></li>
           <li class=" ESPACIO "><a href="sodasV.html#mas">Más</a></li>
          
           <li>
